@@ -1,5 +1,6 @@
 - Restore PHP 5.3 compatibility in creating settings. Note: next release will require 5.5+!
 - Fix issue saving settings on certain environments due to missing value for source [#129]
+- Fix incorrect header/container alignment in both manager pages [#128]
 
 ++ ClientConfig 1.4.1-pl
 ++ Released on 2017-02-02
